// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add member tests Member Role Tests Adds a member role to the database and then deletes it 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "My Desc",
  "isPublic": true,
  "name": {
    "en": "en name",
    "fi": "fi name",
    "sv": "sv name",
  },
  "permissions": [
    "aircraft.admin",
    "booking.admin",
  ],
  "roleId": "TEST_ROLE",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db add member tests add member and update member 1`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "brevoContactId": undefined,
  "canMakeReservations": false,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": null,
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "member",
  "licenceExpiry": null,
  "licenceId": undefined,
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": null,
  "medicalLaplExpiry": null,
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": null,
  "postcode": "00100",
  "roles": [],
  "streetAddress": "Test Street",
  "townCity": "Test City",
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 2`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "brevoContactId": undefined,
  "canMakeReservations": false,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test2",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": null,
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "member",
  "licenceExpiry": null,
  "licenceId": undefined,
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": null,
  "medicalLaplExpiry": null,
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": null,
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Test Street",
  "townCity": "Test City",
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMemberByEmail should return member data for a valid email address 1`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "481",
  "brevoContactId": undefined,
  "canMakeReservations": false,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Pekka",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0441098765",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Hämäläinen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
        "store.admin",
        "fuelPrices.admin",
        "exam.admin",
        "dto.admin",
        "events.admin",
        "expense.admin",
        "inventory.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberByEmail should return member data regardless of the case 1`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "481",
  "brevoContactId": undefined,
  "canMakeReservations": false,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Pekka",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0441098765",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Hämäläinen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
        "store.admin",
        "fuelPrices.admin",
        "exam.admin",
        "dto.admin",
        "events.admin",
        "expense.admin",
        "inventory.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "123",
  "brevoContactId": undefined,
  "canMakeReservations": true,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Matti",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
        "store.user",
        "fuelPrices.user",
        "dto.user",
        "inventory.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [
        "dto.instructor",
      ],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberById should return member data for a valid member id 1`] = `
{
  "applicationData": undefined,
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "123",
  "brevoContactId": undefined,
  "canMakeReservations": true,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Matti",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "mailingLists": undefined,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
        "store.user",
        "fuelPrices.user",
        "dto.user",
        "inventory.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [
        "dto.instructor",
      ],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberRolesByMemberId should return roles for given valid member 1`] = `
[
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with additional flying rights",
    "isPublic": false,
    "name": {
      "en": "Flying Member",
      "fi": "Lento-oikeus",
      "sv": "Flygmedlem",
    },
    "permissions": [
      "flightlog.user",
      "booking.user",
      "aircraft.user",
      "access_codes.user",
      "document.user",
      "store.user",
      "fuelPrices.user",
      "dto.user",
      "inventory.user",
    ],
    "roleId": "FLYING_MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Instructor with permissions to manage training",
    "isPublic": true,
    "name": {
      "en": "Instructor",
      "fi": "Lennonopettaja",
      "sv": "Instruktör",
    },
    "permissions": [
      "dto.instructor",
    ],
    "roleId": "INSTRUCTOR",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with basic access",
    "isPublic": true,
    "name": {
      "en": "Member",
      "fi": "Jäsen",
      "sv": "Medlem",
    },
    "permissions": [
      "member",
      "document.user",
      "store.user",
      "exam.user",
      "dto.user",
      "expense.user",
      "inventory.user",
    ],
    "roleId": "MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Safety Manager takes care of processing anonymized occurrences",
    "isPublic": false,
    "name": {
      "en": "Safety Manager",
      "fi": "Turvallisuusvastaava",
      "sv": "Säkerhetsansvarig",
    },
    "permissions": [
      "sms.manager",
    ],
    "roleId": "SMS_MANAGER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "Administrator with full access",
  "isPublic": false,
  "name": {
    "en": "Administrator",
    "fi": "Ylläpitäjä",
    "sv": "Administratör",
  },
  "permissions": [
    "member.admin",
    "flightlog.admin",
    "booking.admin",
    "aircraft.admin",
    "access_codes.admin",
    "invoicing.admin",
    "document.admin",
    "outbox.admin",
    "store.admin",
    "fuelPrices.admin",
    "exam.admin",
    "dto.admin",
    "events.admin",
    "expense.admin",
    "inventory.admin",
  ],
  "roleId": "ADMIN",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMembers should return only approved members for valid members 1`] = `
[
  {
    "email": "antti.heikkinen@example.com",
    "first": "Antti",
    "lang": "fi",
    "last": "Heikkinen",
    "memberId": "Antti1",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
    "townCity": "Jyväskylä",
  },
  {
    "email": "examinerfe@mik.com",
    "first": "Exe",
    "lang": "fi",
    "last": "McExaminerface",
    "memberId": "Examiner1",
    "phoneNumber": "3584400012345",
    "roles": [
      "EXAMINER",
    ],
    "townCity": "Tampere",
  },
  {
    "email": "niko.ikonen@mik.fi",
    "first": "John",
    "lang": "fi",
    "last": "McDoe",
    "memberId": "John1",
    "phoneNumber": "0401234567",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Helsinki",
  },
  {
    "email": "jukka.nieminen@example.com",
    "first": "Jukka",
    "lang": "fi",
    "last": "Nieminen",
    "memberId": "Jukka1",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
    "townCity": "Tampere",
  },
  {
    "email": "juho.kolehmainen@iki.fi",
    "first": "Liisa",
    "lang": "fi",
    "last": "Korhonen",
    "memberId": "Liisa1",
    "phoneNumber": "0412345678",
    "roles": [
      "COMMITTEE",
    ],
    "townCity": "Espoo",
  },
  {
    "email": "pekka.hamalainen@example.com",
    "first": "Pekka",
    "lang": "fi",
    "last": "Hämäläinen",
    "memberId": "Pekka1",
    "phoneNumber": "0445678901",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Turku",
  },
  {
    "email": "pirjo.makela@example.com",
    "first": "Pirjo",
    "lang": "fi",
    "last": "Mäkelä",
    "memberId": "Pirjo1",
    "phoneNumber": "0451234002",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Helsinki",
  },
  {
    "email": "risto.jarvinen@example.com",
    "first": "Risto",
    "lang": "fi",
    "last": "Järvinen",
    "memberId": "Risto1",
    "phoneNumber": "0451234001",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Helsinki",
  },
  {
    "email": "sanna.koskinen@example.com",
    "first": "Sanna",
    "lang": "fi",
    "last": "Koskinen",
    "memberId": "Sanna1",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
    "townCity": "Lahti",
  },
  {
    "email": "teemu.kinnunen@example.com",
    "first": "Teemu",
    "lang": "fi",
    "last": "Kinnunen",
    "memberId": "Teemu1",
    "phoneNumber": "0451234003",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Helsinki",
  },
]
`;

exports[`Db query member tests getMembers should return unapproved members for admins 1`] = `
[
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "canMakeReservations": true,
    "email": "anna.makinen@example.com",
    "first": "Anna",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Mäkinen",
    "memberId": "Anna1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
    "townCity": "Vantaa",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "canMakeReservations": false,
    "email": "juha.seppala@example.com",
    "first": "Juha",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Seppälä",
    "memberId": "Juha1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Kuopio",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "canMakeReservations": false,
    "email": "kaisa.laine@example.com",
    "first": "Kaisa",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Laine",
    "memberId": "Kaisa1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
    "townCity": "Oulu",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "canMakeReservations": true,
    "email": "marja1@gmailgg.com",
    "first": "Marja",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0490123456",
    "roles": [],
    "townCity": "Pori",
  },
]
`;
